# Sentinel-Scout

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  train_model.py
.github/: pull_request_template.md
app/: __init__.py  main.py  metrics_logger.py  model_manager.py  model_sentinel.json  retrain.py  schemas.py  scout.py  tracker_manager.py
docs/adr/: 0001-use-uv-instead-of-pip.md  0002-use-fastapi-for-model-serving.md  0003-use-pydantic-for-data-validation.md  0004-use-docker-for-containerization.md  0005-use-redis-for-feature-cache.md  0006-use-xgboost-for-hot-path-model.md  0007-enable-redis-aof-and-persistent-volume.md  0008-conditional-llm-invocation-for-high-risk-transactions.md  0009-enforce-structured-json-output-from-llm.md  0011-use-real-time-heath-monitoring.md  0012-manage-concurrency-with-reentrant-locks.md  0013-structured-logging-and-audit-strategy.md  0014-early-warning-fraud-alert-threshold.md  0015-transaction-identification-for-data-lineage-uuid.md  0016-human-in-the-loop-feedback-endpoint.md  0017-temporary-feature-persistence-for-retraining-redis-buffer.md  0018-incremental-offline-retraining-strategy.md  0019-hot-reload-model-update-without-downtime.md  010-use-background-tasks-for-scout-investigation
tests/: __init__.py  test_main.py
