[project]
name = "sentinel-ml"
version = "0.1.0"
description = "Sentinel & Scout ML API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pytest>=9.0.2",
    "httpx>=0.27.0",
    "redis>=7.2.0",
    "xgboost>=3.2.0",
    "scikit-learn>=1.8.0",
    "joblib>=1.5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
